syntax = "proto3";

package avalanchecore;
option go_package = "github.com/sqrtofpisqaured/avalanche/avalanchecore";

message CMNMessage {
  oneof message {
    AvalancheClient announce = 1;
    AvalancheClient announce_reply = 2;
    Presence presence = 3;
  }
}

message Presence {
  uint32 version = 1;
  string client_id = 2;
  string destination = 3;
  int64 timestamp = 4;
}

message AvalancheClient {
  uint32 version = 1;
  string client_id = 2;
  string destination = 3;
  repeated Capability capabilities = 5;
}

message Capability {
}